--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.5.0",
     "@notionhq/client": "^0.2.2",
+    "emailjs": "^3.8.0",
     "next": "^12.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
