--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^12.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-github-calendar": "^3.2.2"
+    "react-github-calendar": "^3.2.2",
+    "react-slick": "^0.29.0"
   }
 }
