new projects added

--- a/pages/api/projects.json
+++ b/pages/api/projects.json
@@ -3,17 +3,17 @@
     "id": 1,
     "name": "Top Parent",
     "image": [
-      "https://i.ibb.co/RY2rWxm/tpa1.png",
-      "https://i.ibb.co/tXP9vzt/tpa2.png",
-      "https://i.ibb.co/5Lzb6cJ/tpa3.png",
-      "https://i.ibb.co/h2Rb3vn/tpa4.png",
-      "https://i.ibb.co/X4zBMt1/tpa5.png",
-      "https://i.ibb.co/GTtDVGk/tpa6.png",
-      "https://i.ibb.co/7JsYT0t/tpa7.png",
-      "https://i.ibb.co/rZvw56T/tpa8.png",
-      "https://i.ibb.co/qjh4zdn/tpa9.png",
-      "https://i.ibb.co/Kx9mtQK/tpa10.png",
-      "https://i.ibb.co/kM761BS/tpa11.png"
+      "https://i.ibb.co/WGMJKGg/tpa1-16x9.png",
+      "https://i.ibb.co/zsCXrPG/tpa2-16x9.png",
+      "https://i.ibb.co/FY97qZN/tpa3-16x9.png",
+      "https://i.ibb.co/vHz5qp2/tpa4-16x9.png",
+      "https://i.ibb.co/KqCn8HX/tpa5-16x9.png",
+      "https://i.ibb.co/Xk7ZsX2/tpa6-16x9.png",
+      "https://i.ibb.co/WfpybvB/tpa7-16x9.png",
+      "https://i.ibb.co/1fYhbZJ/tpa8-16x9.png",
+      "https://i.ibb.co/TkVwh8p/tpa9-16x9.png",
+      "https://i.ibb.co/JqMVHcT/tpa10-16x9.png",
+      "https://i.ibb.co/7rh6gpy/tpa11-16x9.png"
     ],
     "description": "With the Top Parent App, parents learn new ways of raising, nurturing, life skills and studying for their 3-8 year olds. Top Parent Learning Enables Parents with Teaching Videos, Quizzes, and Kids Learning EdTech Apps - Absolutely Free!",
     "role": "I gave the revamp to this App single-handedly",
@@ -30,21 +30,21 @@
     "id": 2,
     "name": "Top Parent Dashboard",
     "image": [
-      "https://i.ibb.co/brYSw86/tpc1.png",
-      "https://i.ibb.co/pLGJrzC/tpc2.png",
-      "https://i.ibb.co/H7pgKDP/tpc3.png",
-      "https://i.ibb.co/M8Bq5b1/tpc4.png",
-      "https://i.ibb.co/XC1BgKp/tpc5.png",
-      "https://i.ibb.co/F4bzz1S/tpc6.png",
-      "https://i.ibb.co/YPpspLn/tpc7.png",
-      "https://i.ibb.co/djZLkC3/tpc8.png",
-      "https://i.ibb.co/vZPbjNG/tpc9.png",
-      "https://i.ibb.co/1sLLsLp/tpc10.png",
-      "https://i.ibb.co/VtXvXwP/tpc11.png",
-      "https://i.ibb.co/QmTGt9Y/tpc12.png",
-      "https://i.ibb.co/N37ypGm/tpc13.png",
-      "https://i.ibb.co/w6xbQCf/tpc14.png",
-      "https://i.ibb.co/xfRNKX6/tpc15.png"
+      "https://i.ibb.co/Jqr20vY/tpc1-16x9.png",
+      "https://i.ibb.co/swc38ZG/tpc2-16x9.png",
+      "https://i.ibb.co/GkMYY3y/tpc3-16x9.png",
+      "https://i.ibb.co/Yy5p58T/tpc4-16x9.png",
+      "https://i.ibb.co/59Lm9tt/tpc5-16x9.png",
+      "https://i.ibb.co/tQkyw38/tpc6-16x9.png",
+      "https://i.ibb.co/wBhmSt8/tpc7-16x9.png",
+      "https://i.ibb.co/gF9xHg9/tpc8-16x9.png",
+      "https://i.ibb.co/qsck4Jz/tpc9-16x9.png",
+      "https://i.ibb.co/9vhpFgD/tpc10-16x9.png",
+      "https://i.ibb.co/yh2YmKH/tpc11-16x9.png",
+      "https://i.ibb.co/HPhJ4WV/tpc12-16x9.png",
+      "https://i.ibb.co/v1d0nLY/tpc13-16x9.png",
+      "https://i.ibb.co/s5NT4KL/tpc14-16x9.png",
+      "https://i.ibb.co/FYQ57Bj/tpc15-16x9.png"
     ],
     "description": "With the Top Parent App, parents learn new ways of raising, nurturing, life skills and studying for their 3-8 year olds. Top Parent Learning Enables Parents with Teaching Videos, Quizzes, and Kids Learning EdTech Apps - Absolutely Free!",
     "role": "Worked as a substitute developer and developed few features and fixed bugs",
@@ -63,10 +63,10 @@
     "id": 3,
     "name": "Quoality User-Front",
     "image": [
-      "https://i.ibb.co/X4fm1pP/qua1.png",
-      "https://i.ibb.co/hYdbx0X/qua2.png",
-      "https://i.ibb.co/qmHj0mb/qua3.png",
-      "https://i.ibb.co/qmsVsBd/qua4.png"
+      "https://i.ibb.co/8sC8w3r/qua1-16x9.png",
+      "https://i.ibb.co/vmwHnbD/qua2-16x9.png",
+      "https://i.ibb.co/j8xrdDd/qua3-16x9.png",
+      "https://i.ibb.co/CmgfG9K/qua4-16x9.png"
     ],
     "description": "E-commerce platform for ordering auxiliary service in a hostel",
     "tags": [
@@ -87,15 +87,15 @@
     "id": 4,
     "name": "Quoality Website",
     "image": [
-      "https://i.ibb.co/9V2dsnC/qw1.png",
-      "https://i.ibb.co/9bTh31N/qw2.png",
-      "https://i.ibb.co/YNpWf3J/qw3.png",
-      "https://i.ibb.co/kGR2RqQ/qw4.png",
-      "https://i.ibb.co/rvhSLFL/qw5.png",
-      "https://i.ibb.co/qxKZGd7/qw6.png",
-      "https://i.ibb.co/dfP4CHK/qw7.png",
-      "https://i.ibb.co/NYgW1d9/qw8.png",
-      "https://i.ibb.co/tsfVNy5/qw9.png"
+      "https://i.ibb.co/BcBCfs6/qw1-16x9.png",
+      "https://i.ibb.co/hK2Qc57/qw2-16x9.png",
+      "https://i.ibb.co/C8k7357/qw3-16x9.png",
+      "https://i.ibb.co/ydGSJzm/qw4-16x9.png",
+      "https://i.ibb.co/f44wgzy/qw5-16x9.png",
+      "https://i.ibb.co/4j7rpJc/qw6-16x9.png",
+      "https://i.ibb.co/ZxNMJ0W/qw7-16x9.png",
+      "https://i.ibb.co/Jm92pDc/qw8-16x9.png",
+      "https://i.ibb.co/XLcjJnK/qw9-16x9.png"
     ],
     "description": "E-commerce platform for ordering auxiliary service in a hostel and CMS is on strapi",
     "tags": ["next", "tailwind", "material-ui", "strapi", "sass", "rest-api"],
@@ -106,7 +106,7 @@
     "id": 5,
     "name": "E-Vaccine-App",
     "image": [
-      "https://i.ibb.co/G2Q0C1q/jj-Vaccine-guillame-Br-1285072572-770x533-1.jpg"
+      "https://i.ibb.co/1XB4SDW/jj-Vaccine-guillame-Br-1285072572-770x533-1-16x9.png"
     ],
     "description": "Developed E-Vaccine tracker like Aarogya Setu",
     "role": "Developed the whole user facing app from scratch to production ready",
@@ -116,15 +116,13 @@
     "id": 6,
     "name": "TheHosteller",
     "image": [
-      "https://i.ibb.co/syCmd5X/th1.png",
-      "https://i.ibb.co/6ZKdst1/th2.png",
-      "https://i.ibb.co/mXvvx19/th3.png",
-      "https://i.ibb.co/QXR9N82/th4.png",
-      "https://i.ibb.co/QXR9N82/th4.png",
-      "https://i.ibb.co/1fZxFWk/th5.png",
-      "https://i.ibb.co/CVt0CC4/th6.png",
-      "https://i.ibb.co/RCT7mq4/th8.png",
-      "https://i.ibb.co/Y8786Wp/th9.png"
+      "https://i.ibb.co/FKKbCL8/Screenshot-2024-01-28-at-5-12-32-PM-16x9.png",
+      "https://i.ibb.co/ykjzbq2/Screenshot-2024-01-28-at-5-12-47-PM-16x9.png",
+      "https://i.ibb.co/xJnPsGH/Screenshot-2024-01-28-at-5-13-05-PM-16x9.png",
+      "https://i.ibb.co/DL7bfF5/Screenshot-2024-01-28-at-5-13-26-PM-16x9.png",
+      "https://i.ibb.co/VNqBy0X/Screenshot-2024-01-28-at-5-13-44-PM-16x9.png",
+      "https://i.ibb.co/bBj4hx4/Screenshot-2024-01-28-at-5-14-05-PM-16x9.png",
+      "https://i.ibb.co/5Y0KTjL/Screenshot-2024-01-28-at-5-14-20-PM-16x9.png"
     ],
     "description": "The Hosteller, a chain of backpacker hostels with 18+ hostels across India currently, is the perfect pit-stop for global as well as local travellers to relax, rejuvenate and experience India’s rich heritage while not worrying about a clean, safe and smart place to stay.",
     "role": "Developed the whole website from scratch to production ready",
@@ -142,9 +140,9 @@
   {
     "id": 7,
     "name": "TheHosteller-Dashboard",
-    "image": ["https://i.ibb.co/FKwSCs4/hd.png"],
+    "image": ["https://i.ibb.co/x23Fpr8/hd-16x9.png"],
     "description": "The Hosteller, a chain of backpacker hostels with 18+ hostels across India currently, is the perfect pit-stop for global as well as local travellers to relax, rejuvenate and experience India’s rich heritage while not worrying about a clean, safe and smart place to stay.",
-    "role": "Developing their CMS and Admin Panel",
+    "role": "Developed their CMS and Admin Panel",
     "tags": [
       "react",
       "redux",
@@ -153,5 +151,119 @@
       "veuxy",
       "sass"
     ]
+  },
+  {
+    "id": 8,
+    "name": "Global Supply Chain Intelligence Platform",
+    "image": [
+      "https://i.ibb.co/By70tsr/Screenshot-2024-01-28-at-11-22-42-PM-16x9.png",
+      "https://i.ibb.co/ZHGsctT/Screenshot-2024-01-28-at-11-23-18-PM-16x9.png",
+      "https://i.ibb.co/dtbX4gr/Screenshot-2024-01-28-at-11-23-40-PM-16x9.png",
+      "https://i.ibb.co/pnyYq92/Screenshot-2024-01-28-at-11-24-41-PM-16x9.png",
+      "https://i.ibb.co/4NnqY8X/Screenshot-2024-01-28-at-11-24-56-PM-16x9.png",
+      "https://i.ibb.co/nwwJM8D/Screenshot-2024-01-28-at-11-26-11-PM-16x9.png",
+      "https://i.ibb.co/JCHqGV0/Screenshot-2024-01-28-at-11-26-27-PM-16x9.png",
+      "https://i.ibb.co/FHmthdQ/Screenshot-2024-01-28-at-11-26-44-PM-16x9.png",
+      "https://i.ibb.co/BCWx4z1/Screenshot-2024-01-28-at-11-28-42-PM-16x9.png",
+      "https://i.ibb.co/cgxg6Mp/Screenshot-2024-01-28-at-11-28-58-PM-16x9.png",
+      "https://i.ibb.co/DfcNmxL/Screenshot-2024-01-28-at-11-29-24-PM-16x9.png",
+      "https://i.ibb.co/26NSbPR/Screenshot-2024-01-28-at-11-30-22-PM-16x9.png",
+      "https://i.ibb.co/cvLkVZN/Screenshot-2024-01-28-at-11-31-22-PM-16x9.png",
+      "https://i.ibb.co/HYzGzfB/Screenshot-2024-01-28-at-11-32-21-PM-16x9.png",
+      "https://i.ibb.co/fq0HLw2/Screenshot-2024-01-28-at-11-33-11-PM-16x9.png"
+
+    ],
+    "description": "Trademo Intel is an intuitive trade data platform enabling global supply chain visibility and insights into import-export data of 1.8 billion shipments for business intelligence, market analysis, global sourcing, and diversifying supply chains.",
+    "role": "Joined as one of the initial developers in the frontend team and have been working closely on features and functionalities.",
+    "tags": [
+      "react",
+      "redux",
+      "sass",
+      "bootstrap"
+    ]
+  },
+  {
+    "id": 9,
+    "name": "Global Trade Compliance & Management Platform",
+    "image": [
+      "https://i.ibb.co/1dBk42f/Screenshot-2024-01-29-at-3-20-08-AM-16x9.png",
+      "https://i.ibb.co/PzMFsfB/Screenshot-2024-01-29-at-3-20-56-AM-16x9.png",
+      "https://i.ibb.co/wg685CP/Screenshot-2024-01-29-at-3-21-48-AM-16x9.png",
+      "https://i.ibb.co/2y7fn0V/Screenshot-2024-01-29-at-3-22-24-AM-16x9.png",
+      "https://i.ibb.co/Lh1JTwZ/Screenshot-2024-01-29-at-3-22-51-AM-16x9.png",
+      "https://i.ibb.co/h8244fr/Screenshot-2024-01-29-at-3-24-02-AM-16x9.png",
+      "https://i.ibb.co/JRzpS2R/Screenshot-2024-01-29-at-3-24-36-AM-16x9.png",
+      "https://i.ibb.co/nPxBgCR/Screenshot-2024-01-29-at-3-24-56-AM-16x9.png"
+    ],
+    "description": "Manage your global trade operations and compliance while reducing operational risk by defining and enforcing global trade regulations and corporate policies. Our AI-powered solutions automate, streamline, and simplify import-export compliance for businesses of all sizes, minimizing the risk of non-compliance and protecting business interests.",
+    "role": "Independently overhauled and deployed 2 existing products within a stringent one-week timeline, demonstrating exceptional project management and technical skills.",
+    "tags": [
+      "react",
+      "redux",
+      "sass",
+      "bootstrap"
+    ]
+  },
+  {
+    "id": 10,
+    "name": "The API Explorer",
+    "image": [
+      "https://i.ibb.co/MBbyWPd/Screenshot-2024-01-29-at-3-36-16-AM-16x9.png",
+      "https://i.ibb.co/ykCtW01/Screenshot-2024-01-29-at-3-37-43-AM-16x9.png",
+      "https://i.ibb.co/d2v9815/Screenshot-2024-01-29-at-3-38-11-AM-16x9.png",
+      "https://i.ibb.co/Rj4qQgN/Screenshot-2024-01-29-at-3-38-29-AM-16x9.png"
+    ],
+    "description": "In House API documentation tool making it easy for back end implementation and client side consumption",
+    "role": "Independently conceived, designed, and developed an innovative API Documentation tool. This initiative resulted in the generation of over 600+ leads within the last 2 months",
+    "tags": [
+      "react",
+      "redux",
+      "sass",
+      "bootstrap"
+    ],
+    "demo": "https://api-explorer.trademo.com/api-exploration"
+  },
+  {
+    "id": 11,
+    "name": "Trademo Website",
+    "image": [
+      "https://i.ibb.co/zNnXT0v/Screenshot-2024-01-29-at-3-46-31-AM-16x9.png",
+      "https://i.ibb.co/ZBJW3hN/Screenshot-2024-01-29-at-3-46-51-AM-16x9.png",
+      "https://i.ibb.co/tLMG4vX/Screenshot-2024-01-29-at-3-47-07-AM-16x9.png",
+      "https://i.ibb.co/Y0HYq3h/Screenshot-2024-01-29-at-3-47-34-AM-16x9.png",
+      "https://i.ibb.co/RbjSwry/Screenshot-2024-01-29-at-3-48-03-AM-16x9.png",
+      "https://i.ibb.co/1ssHc5f/Screenshot-2024-01-29-at-3-48-26-AM-16x9.png",
+      "https://i.ibb.co/VqjkZsx/Screenshot-2024-01-29-at-3-48-52-AM-16x9.png",
+      "https://i.ibb.co/HzwTvbc/Screenshot-2024-01-29-at-3-49-55-AM-16x9.png",
+      "https://i.ibb.co/GC9H0wY/Screenshot-2024-01-29-at-3-50-16-AM-16x9.png",
+      "https://i.ibb.co/GC9H0wY/Screenshot-2024-01-29-at-3-50-16-AM-16x9.png",
+      "https://i.ibb.co/k3WjFgd/Screenshot-2024-01-29-at-3-51-23-AM-16x9.png"
+    ],
+    "description": "Trademo is a SaaS startup focused on global supply chain intelligence",
+    "role": "Led a significant rewrite of the company's website from React to Next.js, resulting in a performance boost from 68% to 90%, and a substantial increase in page indexing by 100,000.",
+   "tags": [
+    "next",
+    "redux",
+    "sass",
+    "bootstrap"
+  ],
+    "demo": "https://www.trademo.com/"
+  },
+  {
+    "id": 12,
+    "name": "User Management System",
+    "image": [
+      "https://i.ibb.co/JcHzJL5/Screenshot-2024-01-29-at-4-20-38-AM-16x9.png",
+      "https://i.ibb.co/JcHzJL5/Screenshot-2024-01-29-at-4-20-38-AM-16x9.png"
+    ],
+    "description": "User Management System (UMS) with multiple access levels, including admin and super admin.",
+    "role": "Developed UMS with multiple access levels, including admin and super admin.",
+    "tags": [
+      "react",
+      "redux",
+      "sass",
+      "bootstrap"
+    ]
   }
 ]
+
